# Kinect-Azure

./: .gitignore  CalApril13Trans.txt  CalFeb17Transv2.txt  CalFeb19Trans.txt  README.md
Azure-Kinect-Sensor-SDK-develop/examples/green_screen/: CMakeLists.txt  Findk4a.cmake
BodyTracking/: BodyTracking.vcxproj  BodyTracking.vcxproj.filters
Cob Kinect Azure/: .gitignore  Cob Kinect Azure.vcxproj  Cob Kinect AzureUpdated.sln  README.md  main.cpp
MatLab/: CalcKinematics.m  CreateTransformationTxtFile.asv  CreateTransformationTxtFile.m  CreateTransformationTxtFile_2Kinect.m  DUPELV_BodyTrackingProcessing.asv  DUPELV_BodyTrackingProcessing.m  DUPELV_CheckBodyTracking.asv  DUPELV_CheckBodyTracking.m  DUPELV_PointCloudProcessing.asv  DUPELV_PointCloudProcessing.m  KinectAzure_trc.m  ManualRun.m  MarkerEffect.asv  MarkerEffect.m  OptotrackProcess.m  PointCloud.m  Process_mkvTOply.asv  Process_mkvTOply.m  ReadingJson.m  TestMyCrust.m  TestMyCrustOpen.m  TransformingPointClouds.asv  TransformingPointClouds.m  TransformingPointClouds_2Kinect.asv  TransformingPointClouds_2Kinect.m  VariabilityDeter.m  ViewBodyTrackData.m  ViewingPointCloud.m
OnlyJointProcessing/: JointMain.cpp  OnlyJointProcessing.vcxproj  OnlyJointProcessing.vcxproj.filters
OpenSim/: BrittanyWalk.trc
PostProcessBodyTracking/: Joints.h  PostProcessBodyTracking.vcxproj  PostProcessBodyTracking.vcxproj.filters  README.md
Sync2CameraJeremy/: MultiDeviceCapturer.h  Source.cpp  Sync2CameraJeremy.vcxproj  Sync2CameraJeremy.vcxproj.filters  Transformation.h
SyncCameraAbby/: SyncCameraAbby.vcxproj  (+1 more)
(+588 files in other folders)
